--- a/my-app/src/app/globals.css
+++ b/my-app/src/app/globals.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
 
 /* kl red - rgb(151, 0, 3); */
 
@@ -6,7 +6,7 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font-family: 'Poppins', sans-serif;
+  font-family: "Poppins", sans-serif;
 }
 
 /* Navbar starts here */
@@ -18,710 +18,9 @@
   z-index: 1000;
 }
 
-/* Hero starts here */
-
-.hero {
-  width: 100%;
-}
-
-.hero-in {
-  width: 100%;
-  height: 100vh;
-}
-
-.here-text {
-  width: 100%;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  text-align: center;
-  color: white;
-}
-
-.here-text h1 {
-  font-size: 4rem;
-  padding: 1rem 0rem;
-  text-shadow: rgb(0, 0, 0) 1px 0 10px;
-}
-
-.here-text p {
-  font-size: 1.5rem;
-  text-shadow: rgb(0, 0, 0) 1px 0 10px;
-}
-
-.hero-in video {
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
-}
-
-.hero-explore {
-  position: absolute;
-  width: 100%;
-  bottom: 0;
-  padding: .5rem 0rem;
-  background-color: rgb(151, 0, 3);
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-
-.hero-explore p {
-  color: white;
-  text-decoration: none;
-  font-size: 1rem;
-}
-
-
-
-/* Three starts here */
-
-.three {
-    width: 100%;    
-}
-
-.three-in {
-    width: 90%;
-    margin: auto;
-    padding: 3rem 0rem;
-}
-
-.three-one {
-    width: 100%;
-}
-
-.three-one-in {
-    width: 100%;
-}
-
-.three-one-in h1{
-    font-size: 3rem;
-    text-align: center;
-}
-
-.three-two {
-    width: 90%;
-    margin: auto;
-    padding: 1rem 0rem;
-}
-
-.three-two-in p{
-    font-size: 1.8rem;
-    text-align: center;
-    color: rgb(151, 0, 3);
-    width: 90%;
-    margin: auto;
-}
-
-.three-three {
-    width: 100%;
-    padding: 1rem 0rem;
-}
-
-.three-three-one {
-    width: 100%;
-    display: flex;
-    row-gap: 1rem;
-    flex-wrap: wrap;
-    align-items: center;
-    justify-content: space-around;
-    /* padding: 1rem 0rem; */
-}
-
-
-.count-cm {
-    width: 33.33%;
-}
-
-.count-cm h1{
-    font-size: 2.5rem;
-    text-align: center;
-    padding: .5rem 0rem;
-}
-
-.count-cm h2{
-    text-align: center;
-    padding: .5rem 0rem;
-    color: rgb(39, 38, 38);
-}
-
-
-
-
-
-/* four */
-
 .four {
   width: 100%;
 }
 .four img {
   width: 100%;
-}
-
-
-
-.seven {
-  width: 100%;
-  padding: 3rem 0rem;
-}
-.seven-in {
-  width: 90%;
-  margin: auto;
-}
-
-.seven-in-one {
-  width: 100%;
-  padding: 1rem 0rem;
-}
-.seven-in-one-one {
-  display: flex;
-  justify-content: space-between;
-  column-gap: 0rem;
-}
-
-.seven-in-one-one .seven-in-one-one-box:first-child {
-  width: 50%;
-  position: relative;
-  background: linear-gradient(to top, rgba(0, 0, 0, 1), rgba(0, 0, 0, 0));
-}
-
-.seven-in-one-one .seven-in-one-one-box:first-child:before {
-  content: "";
-  position: absolute;
-  bottom: 0;
-  left: 0;
-  width: 100%;
-  height: 10rem;  
-  background: linear-gradient(to top, rgba(0, 0, 0, 1), rgba(0, 0, 0, 0));
-}
-
-
-.seven-in-one-one-box-in {
-  width: 100%;
-  height: 100%;
-}
-.seven-in-one-one .seven-in-one-one-box:first-child .seven-in-one-one-box-in img {
-  width: 100%;
-}
-
-.seven-in-one-one-box-in-desc {
-  position: absolute;
-  bottom: 1.5rem;
-  left: 1rem;
-  text-align: center;
-  color: white;
-  text-align: left;
-}
-
-
-.seven-in-one-one .seven-in-one-one-box:nth-child(2), .seven-in-one-one .seven-in-one-one-box:nth-child(3) {
-  width: 24%;
-}
-.seven-in-one-one .seven-in-one-one-box:nth-child(2) {
-  display: flex;
-  flex-direction: column;
-  box-shadow: rgba(0, 0, 0, 0.16) 0px 3px 6px, rgba(0, 0, 0, 0.23) 0px 3px 6px;
-}
-.seven-in-one-one .seven-in-one-one-box:nth-child(2) .seven-in-one-one-box-in {
-  width: 100%;
-}
-.seven-in-one-one .seven-in-one-one-box:nth-child(2) .seven-in-one-one-box-in .seven-in-one-one-box-in-one {
-  width: 100%;
-}
-
-.seven-in-one-one .seven-in-one-one-box:nth-child(2) .seven-in-one-one-box-in .seven-in-one-one-box-in-one img {
-  width: 100%;
-}
-
-.seven-in-one-one .seven-in-one-one-box:nth-child(2) .seven-in-one-one-box-in .seven-in-one-one-box-in-two {
-  padding: 0.5rem 1rem;
-}
-
-.seven-in-one-one .seven-in-one-one-box:nth-child(2) .seven-in-one-one-box-in .seven-in-one-one-box-in-two h4{
-  color: rgb(151, 0, 3);
-}
-.seven-in-one-one .seven-in-one-one-box:nth-child(2) .seven-in-one-one-box-in .seven-in-one-one-box-in-two p {
-  font-size: 1rem;
-}
-
-
-.seven-in-one-one .seven-in-one-one-box:nth-child(3) {
-  display: flex;
-  flex-direction: column;
-  box-shadow: rgba(0, 0, 0, 0.16) 0px 3px 6px, rgba(0, 0, 0, 0.23) 0px 3px 6px;
-}
-.seven-in-one-one .seven-in-one-one-box:nth-child(3) .seven-in-one-one-box-in {
-  width: 100%;
-}
-.seven-in-one-one .seven-in-one-one-box:nth-child(3) .seven-in-one-one-box-in .seven-in-one-one-box-in-one {
-  width: 100%;
-}
-
-.seven-in-one-one .seven-in-one-one-box:nth-child(3) .seven-in-one-one-box-in .seven-in-one-one-box-in-one img {
-  width: 100%;
-}
-
-.seven-in-one-one .seven-in-one-one-box:nth-child(3) .seven-in-one-one-box-in .seven-in-one-one-box-in-two {
-  padding: 0.5rem 1rem;
-}
-
-.seven-in-one-one .seven-in-one-one-box:nth-child(3) .seven-in-one-one-box-in .seven-in-one-one-box-in-two h4{
-  color: rgb(151, 0, 3);
-}
-.seven-in-one-one .seven-in-one-one-box:nth-child(3) .seven-in-one-one-box-in .seven-in-one-one-box-in-two p {
-  font-size: 1rem;
-}
-
-.seven-in-one .seven-in-one-one:nth-child(2) {
-  width: 100%;
-  padding: 1rem 0rem;
-  display: flex;
-  flex-direction: row-reverse;
-  justify-content: space-between;
-}
-
-
-
-
-/* Eight starts here */
-
-.eight {
-  width: 100%;
-  background-color: rgb(243, 243, 243);
-}
-
-.eight-in {
-  width: 90%;
-  margin: auto;
-  padding: 3rem 0rem;
-}
-
-.eight-in-head {
-  padding: 0rem 0rem;
-}
-
-.eight-one {
-  width: 100%;
-}
-
-.eight-one-in {
-  width: 100%;
-  display: flex;
-  justify-content: space-between;
-  padding: 1rem 0rem;
-}
-
-.Event-cm {
-    width: 24%;
-}
-
-/* Nine starts here */
-
-.nine {
-  width: 100%;
-  padding: 3rem 0rem;
-}
-.nine-in {
-  width: 90%;
-  margin: auto;
-  display: flex;
-}
-.nine-in-one {
-  width: 50%;
-}
-
-.nine-in-two {
-  width: 50%;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-.nine-in-two-in {
-  width: 90%;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-.nine-in-two-in img {
-  width: 80%;
-}
-
-
-.nine-in-one-in {
-  width: 100%;
-}
-
-.nine-in-one-in h4 {
-  font-size: 1.5rem;
-  color: rgb(155, 0, 3);
-  font-weight: 400;
-  background: -webkit-linear-gradient(rgb(155, 0, 3), rgb(74, 2, 4));
-  -webkit-background-clip: text;
-  -webkit-text-fill-color: transparent;
-}
-
-.nine-in-one-in h1 {
-  font-size: 3rem;
-  color: black;
-  font-weight: 700;
-  padding: 0.5rem 0rem;
-}
-
-.nine-in-one-in p {
-  font-size: 1.2rem;
-  color: rgb(75, 74, 74);
-  margin-bottom: 1rem;
-  font-weight: 300;
-}
-
-.nine-in-one-link {
-  text-decoration: none;
-  color: rgb(155, 0, 3);
-  font-size: 1.1rem;
-  font-weight: 500;
-  padding: 0.5rem 0rem;
-}
-
-.nine-in-two-in-image {
-  width: 100%;
-  padding: 1rem 0rem;
-}
-
-
-
-
-/* fourteen */
-
-.fourteen {
-  width: 100%;
-  padding: 3rem 0rem;
-}
-.fourteen-in {
-  width: 90%;
-  margin: auto;
-}
-.fourteen-in-header {
-  width: 100%;
-  display: flex;
-  flex-direction: column;
-}
-.fourteen-in-header h4 {
-  font-size: 1.5rem;
-  color: rgb(155, 0, 3);
-  font-weight: 400;
-  background: -webkit-linear-gradient(rgb(155, 0, 3), rgb(74, 2, 4));
-  -webkit-background-clip: text;
-  -webkit-text-fill-color: transparent;
-}
-.fourteen-in-header h1 {
-  font-size: 3rem;
-  color: black;
-  font-weight: 700;
-  padding: 0.5rem 0rem;
-}
-
-.fourteen-in-one {
-  display: flex;
-  justify-content: space-between;
-  padding: 2rem 0rem;
-}
-.fourteen-in-one-box {
-  width: 30%;
-}
-.fourteen-in-one-box-in {
-  width: 100%;
-  border-radius: 10px;
-  display: flex;
-  flex-direction: column;
-}
-.fourteen-in-one-box-in-one {
-  width: 100%;
-  display: flex;
-  justify-content: flex-start;
-  padding: 0.3rem 0rem;
-}
-.fourteen-in-one-box-in-one-icon {
-  width: fit-content;
-  font-size: 1.7rem;
-}
-.fourteen-in-one-box-in-two {
-  width: 100%;
-}
-.fourteen-in-one-box-in-two h3 {
-  font-size: 1.3rem;
-  color: black;
-  font-weight: 500;
-}
-.fourteen-in-one-box-in-three {
-  width: 100%;
-}
-.fourteen-in-one-box-in-three p {
-  font-size: 1rem;
-  color: grey;
-  margin-bottom: 1rem;
-  padding: 0.3rem 0rem;
-}
-
-.fourteen-in-one-box-in-four-link {
-  text-decoration: none;
-  color: rgb(155, 0, 3);
-  font-size: 1rem;
-  font-weight: 600;
-  padding: 0.2rem 0rem;
-
-}
-
-/* five */
-
-
-
-.five {
-  width: 100%;
-  padding: 3rem 0rem;
-}
-.five-in {
-  width: 90%;
-  margin: auto;
-}
-.five-in-heading h1 {
-  text-align: center;
-  font-size: 3rem;
-}
-.five-in-heading p {
-  font-size: 1.8rem;
-  color: rgb(155, 0, 3);
-  font-weight: 400;
-  width: 70%;
-  margin: auto;
-  text-align: center;
-  padding: 1rem 0rem;
-}
-
-.five-in-one {
-  margin-top: 1rem;
-}
-.five-in-one {
-  display: flex;
-  justify-content: space-between;
-}
-.five-in-one-card {
-  width: 19%;
-  padding-bottom: 0.5rem;
-}
-.five-in-one-card-in {
-  width: 100%;
-  display: flex;
-  flex-direction: column;
-}
-.five-in-one-card-in-one img {
-  width: 100%;
-}
-.five-in-one-card-in-two h2 {
-  font-size: 1.3rem;
-  color: black;
-  font-weight: 700;
-}
-.five-in-one-card-in-two p {
-  font-size: 1rem;
-  color: grey;
-  margin-bottom: 1rem;
-}
-.five-in-one-card-in-two-link {
-  text-decoration: none;
-  color: rgb(155, 0, 3);
-  font-size: 0.9rem;
-  font-weight: 500;
-}
-
-
-
-/* Eleven starts here */
-
-.Eleven {
-  width: 100%;
-}
-
-.Eleven-in {
-    width: 90%;
-    margin: auto;
-    padding: 3rem 0rem;
-}
-
-.Eleven-one {
-    width: 100%;
-}
-
-.Eleven-one-in {
-    width: 100%;
-    display: flex;
-    justify-content: space-between;
-    padding: 2.5rem 0rem;
-}
-
-.Social {
-    width: 23%;
-    border: 2px solid lightgray;
-    border-radius: 20px;
-}
-
-.Social-in {
-    width: 100%;
-    padding: 1rem;
-}
-
-.Social-one {
-    width: 100%;
-    font-size: 3rem;
-}
-
-.YT {
-    color: red;
-}
-
-.Insta {
-    color: black;
-}
-
-.Linked {
-    color: rgb(0, 119, 181);
-}
-
-.Social-two {
-    width: 100%;
-}
-
-.Social-three {
-    width: 100%;
-    padding: 1rem 0rem;
-}
-
-.Social-four {
-    width: 100%;
-    padding: 1rem 0rem;
-}
-
-.Social-four a {
-    text-decoration: none;
-    padding: .5rem 1rem;
-    background-color: white;
-    border: .1px solid gray;
-    color: black;
-    font-size: 1rem;
-    border-radius: 10px;
-}
-
-
-/* Twelve starts here */
-
-.Twelve {
-  width: 100%;
-  background-color: rgb(243, 243, 243);
-}
-
-
-
-.Twelve-in {
-  width: 90%;
-  margin: auto;
-  padding: 3rem 0rem;
-}
-
-.Twelve-in-head, .cmh-heading {
-  padding: 0rem 0rem;
-}
-
-.cmh-heading h1 {
-  font-size: 2rem;
-  color: black;
-  font-weight: 700;
-}
-
-.breadcrumb span {
-  font-size: 0.8rem;
-  color: grey;
-}
-
-.Twelve-one {
-  width: 100%;
-}
-
-.Twelve-one-in {
-  width: 100%;
-}
-
-.Twelve-one-in-item {
-  width: 100%;
-}
-
-.Twelve-one-in-item-ques {
-  width: 100%;
-  padding: 1.5rem 0rem .5rem 0rem;
-  border-bottom: 1px solid black;
-}
-
-.Twelve-one-in-item-ques:hover {
-  cursor: pointer;
-}
-
-.Twelve-one-in-item-ans {
-  width: 100%;
-  padding: 1rem;
-  background-color: rgb(155, 0, 3);
-  color: white;
-}
-
-
-
-/* thirteen starts here */
-.thirteen {
-  width: 100%;
-}
-.thirteen-in {
-  width: 90%;
-  margin: auto;
-  padding: 3rem 0rem;
-}
-.thirteen-in-one {
-  display: flex;
-  margin-top: 1rem;
-}
-.thirteen-box {
-  width: 20%;
-}
-.thirteen-box-in {
-  width: 95%;
-  border-top: 2px solid rgb(155, 0, 3);
-
-  padding-bottom: 1rem;
-}
-.thirteen-box-in h2 {
-  color: rgb(155, 0, 3);
-  font-size: 1.5rem;
-  font-weight: 700;
-}
-.thirteen-box-in-desc {
-  width: 90%;
-  height: 6vh;
-}
-.thirteen-box-in-desc p {
-  font-size: 0.7rem;
-  color: grey;
-}
-
-.thirteen-box-in-one {
-  width: 100%;
-}
-.thirteen-box-in-one-in {
-  width: 100%;
-  display: flex;
-  flex-direction: column;
-}
-.thirteen-box-in-one-in-link {
-  width: 100%;
-  text-decoration: none;
-  color: black;
-  font-size: 1.1rem;
-  padding: 0.3rem 0rem;
-
 }
