--- a/my-app/src/app/(pages)/admin/events/page.css
+++ b/my-app/src/app/(pages)/admin/events/page.css
@@ -1,112 +1,111 @@
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
 .EventsComponent {
-    width: 100%;
+  width: 100%;
 }
 
 .EventsComponent-in {
-    width: 100%;
-    height: 100vh;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
+  width: 100%;
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
 
 .Events-one {
-    width: 50%;
-    text-align: center;
-    padding: 2rem;
+  width: 50%;
+  text-align: center;
+  padding: 2rem;
 }
 
 .Events-two {
-    width: 50%;
+  width: 50%;
 }
 
 .Events-two-in {
-    width: 100%;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    gap: 1rem;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  gap: 1rem;
 }
 
 .Events-in-one {
-    width: 50%;
-    margin: auto;
+  width: 50%;
+  margin: auto;
 }
 
 .Events-in-one input {
-    width: 100%;
-    padding: .8rem;
-    border: .1px solid gray;
-    border-radius: 5px;
-    font-size: 1rem;
+  width: 100%;
+  padding: 0.8rem;
+  border: 0.1px solid gray;
+  border-radius: 5px;
+  font-size: 1rem;
 }
 
 .Events-in-two {
-    width: 50%;
-    margin: auto;
+  width: 50%;
+  margin: auto;
 }
 
 .Events-in-two input {
-    width: 100%;
-    padding: .8rem;
-    border: .1px solid gray;
-    border-radius: 5px;
-    font-size: 1rem;
+  width: 100%;
+  padding: 0.8rem;
+  border: 0.1px solid gray;
+  border-radius: 5px;
+  font-size: 1rem;
 }
 
 .Events-in-three {
-    width: 50%;
-    margin: auto;
+  width: 50%;
+  margin: auto;
 }
 
 .Events-in-three input {
-    width: 100%;
-    padding: .8rem;
-    border: .1px solid gray;
-    border-radius: 5px;
-    font-size: 1rem;
+  width: 100%;
+  padding: 0.8rem;
+  border: 0.1px solid gray;
+  border-radius: 5px;
+  font-size: 1rem;
 }
 
 .Events-in-four {
-    width: 50%;
-    margin: auto;
+  width: 50%;
+  margin: auto;
 }
 
 .Events-in-four input {
-    width: 100%;
-    padding: .8rem;
-    border: .1px solid gray;
-    border-radius: 5px;
-    font-size: 1rem;
+  width: 100%;
+  padding: 0.8rem;
+  border: 0.1px solid gray;
+  border-radius: 5px;
+  font-size: 1rem;
 }
 
 .Events-in-five {
-    width: 50%;
-    margin: auto;
+  width: 50%;
+  margin: auto;
 }
 
-
 .Events-in-five button {
-    width: 100%;
-    padding: .8rem;
-    border: .1px solid gray;
-    border-radius: 5px;
-    background-color: rgb(16, 19, 24);
-    color: rgb(249, 249, 251);
-    cursor: pointer;
-    font-size: 1rem;
+  width: 100%;
+  padding: 0.8rem;
+  border: 0.1px solid gray;
+  border-radius: 5px;
+  background-color: rgb(16, 19, 24);
+  color: rgb(249, 249, 251);
+  cursor: pointer;
+  font-size: 1rem;
 }
 
 .Events-in-six a {
-    text-decoration: none;
-    color: rgb(16, 19, 24);
-    font-size: 1rem;
+  text-decoration: none;
+  color: rgb(16, 19, 24);
+  font-size: 1rem;
 }
