--- a/my-app/src/app/(pages)/sil/Navbar.css
+++ b/my-app/src/app/(pages)/sil/Navbar.css
@@ -1,37 +1,37 @@
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
 .SilNavbar {
-    width: 100%;
-    background-color: rgb(151, 3, 0);
+  width: 100%;
+  background-color: rgb(151, 3, 0);
 }
 
 .SilNavbar-in {
-    width: 100%;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    padding: .5rem 2rem;
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 0.5rem 2rem;
 }
 
 .SilNavbar-one {
-    width: 50%;
+  width: 50%;
 }
 
 .SilNavbar-one h1 {
-    font-size: 1.5rem;
-    color: white;
+  font-size: 1.5rem;
+  color: white;
 }
 
 .SilNavbar-two {
-    width: 50%;
-    text-align: right;
+  width: 50%;
+  text-align: right;
 }
 
 .SilNavbar-two a {
-    color: white;
-    text-decoration: none;
+  color: white;
+  text-decoration: none;
 }
