--- a/my-app/src/app/Components/Navbar/Navbar.css
+++ b/my-app/src/app/Components/Navbar/Navbar.css
@@ -1,113 +1,115 @@
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
 .NavbarComponent {
-    width: 100%;
+  width: 100%;
 }
 
 #show-color {
-    background-color: rgb(151, 0, 3);
-    padding: .4rem 0rem;
-    transition: all .2s ease;
+  background-color: rgb(151, 0, 3);
+  padding: 0.4rem 0rem;
+  transition: all 0.2s ease;
 }
 
 .NavbarComponent-in {
-    width: 100%;
-    display: flex;
-    padding: 1rem 0rem;
+  width: 100%;
+  display: flex;
+  padding: 1rem 0rem;
 }
 
 #show-shadow::before {
-    content: "";
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 20vh;
-    background: linear-gradient(to bottom, rgba(0, 0, 0, 0.9) 0%, rgba(0, 0, 0, 0) 100%);
-    z-index: -1;
-  }
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 20vh;
+  background: linear-gradient(
+    to bottom,
+    rgba(0, 0, 0, 0.9) 0%,
+    rgba(0, 0, 0, 0) 100%
+  );
+  z-index: -1;
+}
 
 .Navbar-one {
-    width: 30%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
+  width: 30%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .Navbar-one img {
-    width: 50%;
-    height: auto;
-    object-fit: cover;
+  width: 50%;
+  height: auto;
+  object-fit: cover;
 }
 
 .Navbar-one h1 {
-    font-size: 1.5rem;
-    color: white;
+  font-size: 1.5rem;
+  color: white;
 }
 
 .Navbar-one h1:hover {
-    cursor: pointer;
+  cursor: pointer;
 }
 
 .Navbar-two {
-    width: 70%;
+  width: 70%;
 }
 
 .Navbar-two ul {
-    width: 80%;
-    margin: auto;
-    list-style: none;
-    height: 100%;
-    display: flex;
-    align-items: center;
-    justify-content: space-around;
+  width: 80%;
+  margin: auto;
+  list-style: none;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
 }
 
 .Navbar-two li {
-    font-size: 1.1rem;
-    color: white;
+  font-size: 1.1rem;
+  color: white;
 }
 
 .Navbar-two li:hover {
-    cursor: pointer;
+  cursor: pointer;
 }
 
 .Navbar-two a {
-    color: white;
-    text-decoration: none;
+  color: white;
+  text-decoration: none;
 }
 
-
 .clubs-dropdown {
-    display: none; /* Initially hide the dropdown */
-    position: absolute;
-    left: 0rem;
-    min-width: 90%;
-    top: 5rem;
-    margin-left: 5%;
-    height: 80vh;
+  display: none; /* Initially hide the dropdown */
+  position: absolute;
+  left: 0rem;
+  min-width: 90%;
+  top: 5rem;
+  margin-left: 5%;
+  height: 80vh;
 
-    box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
-    background-color: white;
-    color: black;
-    border: 2px solid rgb(151, 0, 3);
-  }
-  
-  .clubs-hover:hover .clubs-dropdown {
-    display: block; /* Show the dropdown when .clubs-hover is hovered */
-  }
-  
-  .clubs-dropdown .thirteen-in {
-    padding: 1rem 0rem;
+  box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
+  background-color: white;
+  color: black;
+  border: 2px solid rgb(151, 0, 3);
+}
 
-  }
+.clubs-hover:hover .clubs-dropdown {
+  display: block; /* Show the dropdown when .clubs-hover is hovered */
+}
 
-  .clubs-dropdown .thirteen-box-in-one-in-link {
-    color: black;
-    font-size: 0.9rem;
-    margin-bottom: 0rem !important;
-  }
+.clubs-dropdown .thirteen-in {
+  padding: 1rem 0rem;
+}
+
+.clubs-dropdown .thirteen-box-in-one-in-link {
+  color: black;
+  font-size: 0.9rem;
+  margin-bottom: 0rem !important;
+}
