--- a/my-app/src/app/(pages)/components/navbar/page.css
+++ b/my-app/src/app/(pages)/components/navbar/page.css
@@ -84,7 +84,12 @@
     background-color: rgb(151, 0, 3);
     display: flex;
     align-items: center;
-    justify-content: flex-end;
+    justify-content: space-between;
+}
+
+.AdminNavComponent-two-in p {
+    color: white;
+    font-size: .8rem;
 }
 
 .AdminNavComponent-two-in button {
