--- a/my-app/src/app/(pages)/admin/update/clubUpdate/lead/page.css
+++ b/my-app/src/app/(pages)/admin/update/clubUpdate/lead/page.css
@@ -1,30 +1,30 @@
 
 
-.DashboardComponent {
+.LeadUpdateComponent {
     width: 100%;
 }
 
-.DashboardComponent-in {
+.LeadUpdateComponent-in {
     width: 100%;
 }
 
-.DashboardComponent-Nav {
+.LeadUpdateComponent-Nav {
     width: 100%;
 }
 
-.DashboardComponent-one {
+.LeadUpdateComponent-one {
     width: 100%;
 }
 
-.DashboardComponent-one-in {
+.LeadUpdateComponent-one-in {
     width: 100%;
     display: flex;
 }
 
-.DC-sideBar {
+.LU-sideBar {
     width: 16%;
 }
 
-.DC-one {
+.LU-one {
     width: 84%;
 }
