--- a/my-app/src/app/(pages)/components/sidebar/page.css
+++ b/my-app/src/app/(pages)/components/sidebar/page.css
@@ -9,14 +9,14 @@
 }
 
 .SidebarComponent-in {
-    width: 16%;
+    width: 100%;
     height: 83.5vh;
     overflow: scroll;
 }
 
 .SidebarComponent-in-in {
     width: 100%;
-    height: 200vh;
+    height: fit-content;
 }
 
 
@@ -36,14 +36,22 @@
 }
 
 .Sidebar-box-in:hover {
+    cursor: pointer;
     background-color: rgb(112, 112, 112);
 }
 
-.Sidebar-box-in a {
-    text-decoration: none;
+.Sidebar-boxOpen {
+    background-color: rgb(112, 112, 112);
+}
+
+.Sidebar-box-in p {
     color: white;
 }
 
 .sideBar-icon {
+    color: white;
+}
+
+.Sidebar-item-with-sub {
     color: white;
 }
