--- a/my-app/src/app/clubs/TEC/ZeroOneCodeClub/page.css
+++ b/my-app/src/app/clubs/TEC/ZeroOneCodeClub/page.css
@@ -53,6 +53,7 @@
 
 .club-hero-in img {
   width: 100%;
+  height: 100%;
 }
 
 .club-hero-in-description {
@@ -146,6 +147,51 @@
   align-items: center;
   justify-content: space-around;
 }
+
+.Club-four-three-in-one-boxe{
+display: flex;
+justify-content: center;
+align-items: center;
+gap: 20px;
+}
+
+.Club-four-three-in-one-boxes{
+border:1px solid black;
+width:20rem;
+height: 20rem;
+}
+
+.Club-four-three-in-one-boxes-text h1{
+font-size: 1.5rem;
+}
+
+.Club-four-two-in-one-boxe{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 20px;
+  }
+  
+  .Club-four-two-in-one-boxes{
+  border:1px solid black;
+  width:20rem;
+  height: 20rem;
+  }
+  
+  .Club-four-two-in-one-boxes-text h1{
+  font-size: 1.5rem;
+  }
+  
+  .club-slider-image {
+    width: 100%;
+    height: auto;
+    transition: opacity 0.5s ease-in-out;
+  }
+  
+#hide-club {
+    display: none;
+  }
+   
 
 .c-op-cm {
   /* width: 18%; */
